# seemycity

./: .gitignore  .windsurfrules  schema.sql
.claude/: launch.json
docs/: backend-tech.md  data-insights-2026-07.md  data-spec.md  frontend-tech.md  plan.md  prd.md  scoring-v2-backtest.md  tech.md  ux.md
docs/snapshots/: v1-scores-2026-07-08.json  v2-scores-2026-07-16.json
seemycity-backend/: .env.example  Cargo.toml  Dockerfile  fly.toml  rust_tech_tree.md
seemycity-backend/.sqlx/: query-3e6cb7da61c0099b9749ee1ed581d32ff302d4b00a4a6dade3d7bbb1e9354eff.json  query-41092a58c9d9106fde97f7c84970ff18e549d7ad78e4b3085e2e0043ff4a4139.json  query-420173123c969641a958c09f2cf502b6b719e78cec064334edcbbd2f240ff639.json  query-479cf14fa41d3e37eef26dda39c716e633f44da8f44ab49fde51d44be4bb1fd2.json  query-637181e074d32cccdb20dbb5731d471005a93d32afc88ecb23542e6a014e0b07.json  query-67b1011aed272a3852196908cf5071c8d57b052c4de3fe1e1ac5c18ce5dfb845.json  query-decd9cb5df173d212ffefbd3f04529dfd561991c3fd75630dce48cb1d7d4ad6f.json  query-e087ad0bf56e0e25246dfd9399d10f33bf6240258cc4e9c97a26a32a60f2a5be.json  query-f94f8e0ed49d234b831072c0fc225575f132c26b465ded3445ae7ee4034dd95c.json
seemycity-backend/migrations/: 0001_initial_schema.sql  0002_add_data_confidence.sql  0003_scoring_v2_inputs.sql
seemycity-backend/src/: confidence.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs  scoring.rs  utils.rs
seemycity-backend/src/api/: mod.rs
seemycity-backend/src/api/muni_money/: audit.rs  capex.rs  client.rs  financials.rs  finpos.rs  incexp.rs  mod.rs  repmaint.rs  types.rs  uifw.rs
seemycity-backend/src/db/: financials.rs  geo.rs  mod.rs  municipalities.rs  queries.rs
seemycity-backend/src/handlers/: mod.rs  municipalities.rs
seemycity-backend/tests/: muni_money_integration_test.rs
seemycity-frontend/: .env.example  Dockerfile  fly.toml  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest-setup-client.ts
seemycity-frontend/src/: app.html  app.scss
seemycity-frontend/src/lib/: types.ts
seemycity-frontend/src/lib/components/: MapComponent.svelte
seemycity-frontend/src/lib/components/compare/: ComparisonCard.svelte  ComparisonContainer.svelte
seemycity-frontend/src/lib/components/detail/: KeyMetricsGrid.svelte  MetricCard.svelte  MunicipalityDetailCard.svelte  PageHeader.svelte  ScoreBreakdown.svelte
seemycity-frontend/src/lib/components/ui/: ConfidenceBadge.svelte  ErrorMessage.svelte  LoadingSpinner.svelte  PageHeader.svelte  ProgressBar.svelte  SearchBar.svelte
seemycity-frontend/src/lib/data/: dummyStore.ts
seemycity-frontend/src/lib/utils/: auditUtils.ts  calculations.ts  colorUtils.ts  formatUtils.ts
seemycity-frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts  page.svelte.test.ts
seemycity-frontend/src/routes/[id]/: +page.svelte  +page.ts
seemycity-frontend/src/routes/compare/: +page.svelte
seemycity-frontend/src/routes/compare/[ids]/: +page.svelte  +page.ts
seemycity-frontend/src/styles/: _base.scss  _typography.scss  _variables.scss
