[package]
name = "seemycity-backend"
version = "0.1.0"
edition = "2024" # Using 2024 edition as requested.

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] } # Using 0.12 as 0.11 is quite old
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json", "rust_decimal" ] }
dotenvy = "0.15" # Renamed from dotenv
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4.27"
uuid = { version = "1", features = ["serde", "v4"] } # Add uuid crate

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
