[package]
name = "seemycity-backend"
version = "0.1.0"
edition = "2024" # Using 2024 edition as requested.

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] } # Ensure features if needed
reqwest = { version = "0.12.5", features = ["json"] } # Using 0.12 as 0.11 is quite old
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "json", "rust_decimal" ] }
dotenvy = "0.15" # Renamed from dotenv
env_logger = "0.11.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
uuid = { version = "1", features = ["serde", "v4"] } # Add uuid crate
geobuf = "0.1.4" # Corrected version to latest available
bytes = "1.6.0"
geojson = { version = "0.24", features = ["geo-types"] } # Added geojson
geo-types = "0.7" # Dependency for geojson features

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
