[package]
name = "seemycity-backend"
version = "0.1.0"
edition = "2024" # Using 2024 edition as requested.

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Ensure features if needed
reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # Using 0.12 as 0.11 is quite old
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "json" ] } 
dotenvy = "0.15" # Renamed from dotenv
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
uuid = { version = "1", features = ["serde", "v4"] } # Add uuid crate
geobuf = "0.1.4" # Corrected version to latest available
bytes = "1.6.0"
geojson = { version = "0.24", features = ["geo-types"] } # Added geojson
geo-types = "0.7" # Dependency for geojson features
rust_decimal = { version = "1.35", features = ["serde-with-float"] }
rust_decimal_macros = "1.37.1"
actix-cors = "0.7" # Added actix-cors

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
dotenvy = "0.15"
env_logger = "0.11" # For initializing logger in tests
